hphp/hack/test/decl/classes.php.typecheck.exp
File "classes.php", line 4, characters 25-39:
Please assign a value (Typing[4055])
File "classes.php", line 9, characters 19-29:
Class MyClass does not initialize all of its members; instanceProperty protectedProperty are not always initialized.
Make sure you systematically set $this->instanceProperty $this->protectedProperty when the method __construct is called.
Alternatively, you can define the members as nullable (?...)
 (NastCheck[3015])
File "classes.php", line 41, characters 31-37:
Reactive functions can only call other reactive functions. (Typing[4200])
File "classes.php", line 9, characters 19-29:
This function is non-reactive.
